--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -42,8 +42,8 @@
 							       <i class="far fa-building"></i>&nbsp;Oficinas
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">Nueva oficina</a>
-									<a class="dropdown-item text-white hoverlink">Lista de oficinas</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/oficina/nueva}">Nueva oficina</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/oficina/listar}">Lista de oficinas</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown">
