--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
@@ -84,8 +84,11 @@
 				      <td class="align-middle">@mdo</td>
 				      <td class="align-middle"><img th:src="@{/img/noimageavaiable.png}" class="img-thumbnail imageline" alt="..."></td>
 				      <td class="align-middle">
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+				      
+				      <!--  <button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
+				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>-->
+				      	<a class="btn btn-warning" th:href="@{/lineaproducto/editar/}+${o.officeCode}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/lineaproducto/borrar/}+${o.officeCode}"><i class="far fa-trash-alt"></i></a>
 				      </td>
 				    </tr>				  
 				  </tbody>
