--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevalineaproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevalineaproducto.html
@@ -40,7 +40,8 @@
 									</div>
 								</div>	  		
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea de producto</button>
+							  		<!-- <button type="button" th:href="@{/lineaproducto/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea de producto</button> -->
+							  	<button type="submit" th:href="@{/lineaproducto/guardar}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea producto</button>
 							  	</div>	  
 							</div>
 						</div>
