--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
@@ -58,7 +58,7 @@
 								    <input type="text" class="form-control" id="territory" th:field="*{territory}" placeholder="Ingresar el territorio en el que se encuentra la oficina">
 						  		</div>
 							  	<div class="mt-4">
-							  		<button type="submit" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear oficina</button>
+							  		<button type="submit" th:href="@{/oficina/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear oficina</button>
 							  	</div>  
 							</div>
 						</div>
