--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
@@ -52,7 +52,7 @@
 									</select>								    
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear orden</button>
+							  		<button type="button" th:href="@{/orden/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear orden</button>
 							  	</div>
 								  
 							</div>
