--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
@@ -46,7 +46,7 @@
 								    <input type="number" class="form-control" id="numerolinea" placeholder="Ingresar numero de linea del pedido">
 						  		</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear detalle de orden</button>
+							  		<button type="button" th:href="@{/ordendetalle/nuevo}"class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear detalle de orden</button>
 							  	</div>
 								  
 							</div>
