--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevopago.html
@@ -40,7 +40,7 @@
 								    <input type="number" class="form-control" id="proveedor" placeholder="Ingresar cantidad a pagar">
 						  		</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear pago</button>
+							  		<button type="button" th:href = "@{/pago/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear pago</button>
 							  	</div>
 								  
 							</div>
