--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoproducto.html
@@ -60,7 +60,7 @@
 								    <input type="text" class="form-control" id="preciolista" placeholder="Ingresar precio de lista del producto">
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear producto</button>
+							  		<button type="button" th:href = "@{/producto/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear producto</button>
 							  	</div>
 								  
 							</div>
