--- a/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarempleado.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarempleado.html
@@ -26,8 +26,8 @@
 						<p>Empleado: Javier Rodriguez</p>
 					</div>
 					<div class="my-3">
-						<button type="button" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancelar</button>
-						<button type="button" class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Eliminar</button>
+						<button type="button" th:href = "@{/empleado/listar}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancelar</button>
+						<button type="button" th:href = "@{/empleado/borrar/confirmar}+${empleado.employeeNumber}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Eliminar</button>
 					</div>
 					</div>
 				</div>
