--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -55,15 +55,18 @@
 									<a class="dropdown-item text-white hoverlink hoverlink">Lista de clientes</a>
 								</div>
 						    </li>
-						    <li class="nav-item dropdown ">
+						           <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-boxes">&nbsp;</i>Productos
+							        <i class="fas fa-clipboard-list"></i>&nbsp;Productos
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
 									<a class="dropdown-item text-white hoverlink hoverlink">Nuevo producto</a>
 									<a class="dropdown-item text-white hoverlink hoverlink">Lista de productos</a>
+									<a class="dropdown-item text-white hoverlink">Nuevo linea de Productos</a>
+									<a class="dropdown-item text-white hoverlink">Lista de linea de Productos</a>
 								</div>
 						    </li>
+						   
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							        <i class="fas fa-coins">&nbsp;</i>Pagos
