--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevocliente.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevocliente.html
@@ -72,7 +72,7 @@
 								    <input type="number" class="form-control" id="credito" placeholder="Ingresar el credito disponible del cliente">
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear cliente</button>
+							  		<button type="button" th:href="@{/cliente/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear cliente</button>
 							  	</div>
 								  
 							</div>
