--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -5,7 +5,7 @@
 			<div class="bg-darkblue py-1 text-white">
 				<div class="pl-3 ml-2 d-flex bd-highlight">
 					<div class="p-2 bd-highlight"><img class="img-fluid" alt="" th:src="@{/img/logo.png}"></div>
-					<div class="p-2 bd-highlight"><h3>Netlify</h3></div>
+					<div class="p-2 bd-highlight"><h3>Solivex - Facturation system</h3></div>
 					<div class="ml-auto p-2 bd-highlight d-flex align-items-center">Argentina, 21 de Junio de 2021 &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;ADMIN -- <i class="far fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-power-off"></i></div>
 				</div>
 			</div>
@@ -21,67 +21,67 @@
 						    </li>
 						    <li class="nav-item dropdown">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-users"></i>&nbsp;Usuarios
+							       <i class="fas fa-users"></i>&nbsp;Users
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">Nuevo usuario</a>
-									<a class="dropdown-item text-white hoverlink">Lista de usuarios</a>
+									<a class="dropdown-item text-white hoverlink">New user</a>
+									<a class="dropdown-item text-white hoverlink">User list</a>
 								</div>
 						    </li>	
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-user-tie"></i>&nbsp;Empleados
+							       <i class="fas fa-user-tie"></i>&nbsp;Employees
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">Nuevo empleado</a>
-									<a class="dropdown-item text-white hoverlink">Lista de empleados</a>
+									<a class="dropdown-item text-white hoverlink">New employee</a>
+									<a class="dropdown-item text-white hoverlink">List of employees</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="far fa-building"></i>&nbsp;Oficinas
+							       <i class="far fa-building"></i>&nbsp;Offices
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink" th:href="@{/oficina/nueva}">Nueva oficina</a>
-									<a class="dropdown-item text-white hoverlink" th:href="@{/oficina/listar}">Lista de oficinas</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/office/new}">New office</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/office/list}">List of offices</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-universal-access"></i>&nbsp;Clientes
+							       <i class="fas fa-universal-access"></i>&nbsp;Customers
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink">Nuevo cliente</a>
-									<a class="dropdown-item text-white hoverlink hoverlink">Lista de clientes</a>
+									<a class="dropdown-item text-white hoverlink hoverlink">New customers</a>
+									<a class="dropdown-item text-white hoverlink hoverlink">List of customers</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-boxes">&nbsp;</i>Productos
+							       <i class="fas fa-boxes">&nbsp;</i>Product
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink">Nuevo producto</a>
-									<a class="dropdown-item text-white hoverlink hoverlink">Lista de productos</a>
+									<a class="dropdown-item text-white hoverlink hoverlink">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink">List of products</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							        <i class="fas fa-coins">&nbsp;</i>Pagos
+							        <i class="fas fa-coins">&nbsp;</i>Payments
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">Nuevo pago</a>
-									<a class="dropdown-item text-white hoverlink">Lista de pagos</a>
+									<a class="dropdown-item text-white hoverlink">New payment</a>
+									<a class="dropdown-item text-white hoverlink">List of payment</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							        <i class="fas fa-clipboard-list"></i>&nbsp;Ordenes
+							        <i class="fas fa-clipboard-list"></i>&nbsp;Orders
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">Nueva orden</a>
-									<a class="dropdown-item text-white hoverlink">Lista de ordenes</a>
-									<a class="dropdown-item text-white hoverlink">Nuevo detalle de Orden</a>
-									<a class="dropdown-item text-white hoverlink">Lista de detalles de ordenes</a>
+									<a class="dropdown-item text-white hoverlink">New oder</a>
+									<a class="dropdown-item text-white hoverlink">List of orders</a>
+									<a class="dropdown-item text-white hoverlink">New order detail</a>
+									<a class="dropdown-item text-white hoverlink">List of orders details</a>
 								</div>
 						    </li>
 						    
