--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
@@ -16,30 +16,31 @@
 			<div class="row">
 				<div class="col-12 mt-3 mb-3 py-2 d-flex bd-highlight mb-3">
 					<div class="p-2 bd-highlight">
-						<h2><i class="far fa-building fa-lg"></i>&nbsp;Lista de oficinas</h2>
+						<h2><i class="far fa-building fa-lg"></i>&nbsp;List of offices</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<a class="btn btn-info" th:href="@{/oficina/nueva}"><i class="fas fa-plus"></i>&nbsp;Crear oficina</a>
+						<a class="btn btn-info" th:href="@{/office/new}"><i class="fas fa-plus"></i>&nbsp;Create office</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
-						<form class="form-inline">
-						   <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Buscar</button>
+						<form class="form-inline" th:action="@{/office/search}" th:method="get">
+						   <input class="form-control mr-sm-2" type="text" id="officecode" name="officecode" placeholder="Search by code " aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="officecode" name="officecity" placeholder="Search by city" aria-label="Search">
+						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
 				</div>
 				<table class="table table-striped col-sm-12 bg-light border">
 				  <thead>
 				    <tr class="bg-buebird text-white">
-				      <th scope="col">Cod.</th>
-				      <th scope="col">Ciudad</th>
-				      <th scope="col">Teléfono</th>
-				      <th scope="col">Dirección</th>
-				      <th scope="col">Estado</th>
-				      <th scope="col">País</th>
-				      <th scope="col">C.P.</th>
-				      <th scope="col">Territorio</th>
-				      <th scope="col">Acciones</th>
+				      <th scope="col">Code</th>
+				      <th scope="col">City</th>
+				      <th scope="col">Phone</th>
+				      <th scope="col">Address</th>
+				      <th scope="col">State</th>
+				      <th scope="col">Country</th>
+				      <th scope="col">Postal Code</th>
+				      <th scope="col">Territory</th>
+				      <th scope="col">Actions</th>
 				    </tr>
 				  </thead>
 				  <tbody>
@@ -47,15 +48,14 @@
 				      <td th:text="${o.officeCode}"></td>
 				      <td th:text="${o.city}"></td>
 				      <td th:text="${o.phone}"></td>
-				      <td th:text="${o.addressLine1}"></td>
+				      <td th:text="${o.addressLine1} + ' ' + ${o.addressLine2}"></td>
 				      <td th:text="${o.state}"></td>
 				      <td th:text="${o.country}"></td>
 				      <td th:text="${o.postalCode}"></td>
 				      <td th:text="${o.territory}"></td>
 				      <td>
-						<!--   -->
-				      	<a class="btn btn-warning" th:href="@{/oficina/editar/}+${o.officeCode}"><i class="fas fa-edit"></i></a>
-				      	<a class="btn btn-danger" th:href="@{/oficina/borrar/}+${o.officeCode}"><i class="far fa-trash-alt"></i></a>
+				      	<a class="btn btn-warning" th:href="@{/office/edit/}+${o.officeCode}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/office/delete/}+${o.officeCode}"><i class="far fa-trash-alt"></i></a>
 				      </td>
 				    </tr>
 				  </tbody>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		
-		<footer th:insert="layout/footer :: footer"></footer>
+		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
