--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarempleados.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarempleados.html
@@ -19,7 +19,7 @@
 						<h2><i class="fas fa-user-tie fa-lg"></i>&nbsp;Lista de empleados</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<button type="button" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp;Crear empleado</button>
+						<a class="btn btn-info" th:href="@{/empleado/nuevo}"><i class="fas fa-plus"></i>&nbsp;Crear empleado</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline">
@@ -31,80 +31,28 @@
 				<table class="table table-striped col-sm-12 bg-light border">
 				  <thead>
 				    <tr class="bg-buebird text-white">
-				      <th scope="col">#</th>
+				      <th scope="col">N°</th>
 				      <th scope="col">Apellido</th>
 				      <th scope="col">Nombre</th>
-				      <th scope="col">Extensión</th>
 				      <th scope="col">Email</th>
 				      <th scope="col">Oficina</th>
 				      <th scope="col">Ocupación</th>
+				     <!-- <th scope="col">N°de empleado</th>-->
 				      <th scope="col">Acciones</th>
 				    </tr>
 				  </thead>
 				  <tbody>
-				    <tr>
-				      <th scope="row">1</th>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
+				    <tr th:each="e: ${employees}">
+				      <td th:text="${e.employeeNumber}"></td>
+				      <td th:text="${e.lastName}"></td>
+				      <td th:text="${e.firstName}"></td>
+				      <td th:text="${e.email}"></td>
+				      <td th:text="${e.officeCode.officeCode}"></td>
+				      <td th:text="${e.jobTitle}"></td>
+				      <!--<td th:text="${e.employee}"></td>-->
 				      <td>
 				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
 				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>				      
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">2</th>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-				      </td>
-				    </tr>
-				    				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				      <td>
-				      	<button type="button" class="btn btn-warning"><i class="fas fa-edit"></i></button>
-				      	<button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
 				      </td>
 				    </tr>
 				  </tbody>
@@ -112,7 +60,7 @@
 			</div>
 		</div>
 		
-		<footer th:insert="layout/footer :: footer"></footer>
+		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
