--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoempleado.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoempleado.html
@@ -17,47 +17,55 @@
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
 					<h2><i class="fas fa-user-tie fa-lg"></i>&nbsp;Registro empleado</h2>
 				</div>
-				<!--  <form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/empleado/guardar}" th:method="post" th:object="${empleado}">-->
-				<form class="bg-white col-sm-7 p-auto m-auto border">
+				  <form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/empleado/guardar}" th:method="post" th:object="${employee}">
+				
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
 						  		<div class="form-group">
+								    <label for="number">N°</label>
+								    <input type="number" class="form-control" id="number" th:field="*{employeeNumber}" placeholder="Ingresar el apellido del empleado">
+						  		</div>
+						  		<div class="form-group">
 								    <label for="apellido">Apellido</label>
-								    <input type="text" class="form-control" id="apellido" placeholder="Ingresar el apellido del empleado">
+								    <input type="text" class="form-control" id="apellido" th:field="*{lastName}" placeholder="Ingresar el apellido del empleado">
 						  		</div>
 						  		<div class="form-group">
 								    <label for="nombre">Nombre</label>
-								    <input type="text" class="form-control" id="nombre" placeholder="Ingresar el nombre del empleado">
+								    <input type="text" class="form-control" id="nombre" th:field="*{firstName}" placeholder="Ingresar el nombre del empleado">
 						  		</div>
 						  		<div class="form-group">
 								    <label for="extension">Extensión</label>
-								    <input type="text" class="form-control" id="extension" placeholder="Ingresar la extensión del empleado">
+								    <input type="text" class="form-control" id="extension" th:field="*{extension}" placeholder="Ingresar la extensión del empleado">
 						  		</div>
 							  	<div class="form-group">
 								    <label for="email">Email</label>
-								    <input type="email" class="form-control" id="email" placeholder="Ingresar el email del empleado">
+								    <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="Ingresar el email del empleado">
 							  	</div>
 							  	<div class="form-group">
 								    <label for="oficina">Oficina</label>
-								    <select class="form-control" id="oficina">
-									  <option>Seleccione una opción</option>
+								    <select class="form-control" name="officeCode">
+									  <option th:each="o:${offices}" th:value="${o.officeCode}">
+									  		<spam th:text="${o.officeCode}"></spam>	
+									  </option>
 									</select>								    
 							  	</div>
 						  		<div class="form-group">
 								    <label for="ocupacion">Ocupación</label>
-								    <input type="text" class="form-control" id="ocupacion" placeholder="Ingresar la ocupación del empleado">
+								    <input type="text" class="form-control" id="ocupacion" th:field="*{jobTitle}" placeholder="Ingresar la ocupación del empleado">
 						  		</div>
 						  		<div class="form-group">
-								    <label for="oficina">Empleado a cargo</label>
-								    <select class="form-control" id="oficina">
-									  <option>Seleccione una opción</option>
+								    <label for="employee">N° de empleado</label>
+								    <select class="form-control"  name="numeremplo" id="numeremplo">
+								      <option th:value="0" >Ninguno</option>
+									  <option th:each="e:${employees}" th:value="${e.employeeNumber}">
+											<span th:text="${e.lastName} + ${e.firstName}"></span>
+									  </option>
 									</select>								    
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear empleado</button>
+							  		<button type="submit" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear empleado</button>
 							  	</div>
-								  
 							</div>
 						</div>
 					</div>
