task:modifique productline

--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -51,7 +51,7 @@
 							       <i class="fas fa-universal-access"></i>&nbsp;Customers
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink">New customers</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" >New customers</a>
 									<a class="dropdown-item text-white hoverlink hoverlink">List of customers</a>
 								</div>
 						    </li>
@@ -60,8 +60,8 @@
 							       <i class="fas fa-boxes">&nbsp;</i>Product
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink">New product</a>
-									<a class="dropdown-item text-white hoverlink hoverlink">List of products</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/nuevo}">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of products</a>
 <!--
 							        <i class="fas fa-clipboard-list"></i>&nbsp;Productos
 							    </a>
