--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaoficina.html
@@ -69,7 +69,7 @@
 							  		<button type="submit" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Save office</button>
 							  		<a th:href="@{/office/list}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
 <!--
-							  		<button type="submit" th:href="@{/oficina/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear oficina</button>
+							  		<!-- <button type="submit" th:href="@{/oficina/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear oficina</button>-->
 -->
 							  	</div>  
 							</div>
