--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevalineaproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevalineaproducto.html
@@ -17,7 +17,7 @@
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
 					<h2><i class="fas fa-boxes  fa-lg"></i>&nbsp;Registro linea de producto</h2>
 				</div>
-				<form class="bg-white col-sm-7 p-auto m-auto border">
+				<form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/lineaproducto/guardar}" th:method="post" th:object="${productlines}">
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
@@ -40,8 +40,8 @@
 									</div>
 								</div>	  		
 							  	<div class="mt-4">
-							  		<!-- <button type="button" th:href="@{/lineaproducto/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea de producto</button> -->
-							  	<button type="submit" th:href="@{/lineaproducto/guardar}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea producto</button>
+							  		 <button type="submit" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea de producto</button> 
+							  <button type="submit" th:href="@{/lineaproducto/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear linea producto</button>
 							  	</div>	  
 							</div>
 						</div>
